fix: text align in timeline

--- a/@twal/styles/base/nav.scss
+++ b/@twal/styles/base/nav.scss
@@ -114,7 +114,6 @@
         display: flex;
         align-items: center;
         display: flex;
-        justify-content: center;
         position: relative;
         &:nth-child(2n + 1) {
           background: rgba($primarycolor, 0.1);
